--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -11,6 +11,12 @@
 
     >
 
+
+
+
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,11 +32,264 @@
             app:title="I-connectresources"
             app:titleTextColor="@color/white"
             android:elevation="4dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical"
+            android:gravity="center"
+
+            android:paddingHorizontal="5dp"
+            >
+
+
+
+
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:cardElevation="5dp"
+                app:cardCornerRadius="50dp"
+
+
+                >
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    >
+
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="165dp"
+                        android:layout_height="137dp"
+                        android:background="@drawable/iconlogo"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textView"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.507" />
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Hello,Rishabh"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.5"
+                        app:layout_constraintStart_toEndOf="@+id/imageView2"
+                        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </com.google.android.material.card.MaterialCardView>
+
+
+
+            <androidx.gridlayout.widget.GridLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                app:columnCount="3"
+                app:rowCount="3"
+                android:layout_marginVertical="10dp"
+
+
+                >
+                <LinearLayout
+                    android:gravity="center_horizontal"
+
+                    app:layout_column="0"
+
+                    app:layout_row="0"
+                    android:orientation="vertical"
+                    app:layout_columnWeight="1"
+                    >
+
+                    <ImageButton
+                        android:id="@+id/msg_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/message1"
+                        android:foreground="@drawable/widget_click_ripple"
+
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Message"
+                        android:textAlignment="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+
+                    app:layout_column="2"
+                    app:layout_columnWeight="1"
+
+                    app:layout_row="0"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal"
+                    >
+
+                    <ImageButton
+                        android:id="@+id/attendance_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/attendance"
+                        android:foreground="@drawable/widget_click_ripple"
+
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Attendance"
+                        android:textAlignment="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    app:layout_columnWeight="1"
+                    android:gravity="center_horizontal"
+
+                    app:layout_column="1"
+
+                    app:layout_row="1"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageButton
+                        android:id="@+id/track_activity_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/trackactivity"
+                        android:foreground="@drawable/widget_click_ripple"
+
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Track Employee"
+                        android:textAlignment="center"
+                        />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    app:layout_columnWeight="1"
+                    android:gravity="center_horizontal"
+
+                    app:layout_column="0"
+
+                    app:layout_row="2"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageButton
+                        android:id="@+id/employees_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/employees1"
+                        android:foreground="@drawable/widget_click_ripple"
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Employees"
+                        android:textAlignment="center"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    app:layout_columnWeight="1"
+                    android:gravity="center_horizontal"
+
+                    app:layout_column="2"
+
+                    app:layout_row="2"
+                    android:orientation="vertical"
+                    >
+
+                    <ImageButton
+                        android:id="@+id/leave_app_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/camera_ic"
+                        android:foreground="@drawable/widget_click_ripple"
+
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="Camera"
+                        android:textAlignment="center"
+                        />
+                </LinearLayout>
+
+
+
+
+            </androidx.gridlayout.widget.GridLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:padding="8dp">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:boxBackgroundMode="outline"
+                    app:boxCornerRadiusBottomEnd="20dp"
+                    app:boxCornerRadiusBottomStart="20dp"
+                    app:boxCornerRadiusTopEnd="20dp"
+                    app:boxCornerRadiusTopStart="20dp"
+                    app:boxStrokeColor="@color/black"
+                    app:boxStrokeWidth="2dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter your message here"
+
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+
+            <!-- ImageButton next to the TextInputLayout -->
+            <ImageButton
+                android:id="@+id/imageButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/sendicon"
+                android:layout_marginStart="8dp"
+            android:contentDescription="Send Message"
+android:foreground="@drawable/widget_click_ripple"
+                />
+        </LinearLayout>
+
+        </LinearLayout>
+
     </LinearLayout>
 
-    <!-- Your content views go here -->
 
-    <!-- NavigationView for the drawer -->
     <com.google.android.material.navigation.NavigationView
 
         android:id="@+id/nav_view"
@@ -43,5 +302,6 @@
         app:itemIconTint="@color/drawer_icon"
         android:background="@color/drawer_background"
         />
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
