--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,30 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="fill"
-    android:background="@drawable/signup_bg"
-    app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
-    app:layout_constraintEnd_toEndOf="@+id/guideline_end"
-    app:layout_constraintStart_toStartOf="@+id/guideline_start"
-    app:layout_constraintTop_toBottomOf="@+id/guideline_top">
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="20dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_bottom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="20dp" />
+    android:background="@drawable/background_signup">
 
     <!-- Vertical Guidelines -->
     <androidx.constraintlayout.widget.Guideline
@@ -41,224 +21,22 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="20dp" />
 
-
-    <TableLayout
-
-        android:id="@+id/table_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/profile_photo"
-        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/fname_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/first_name"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/fname_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:height="48dp"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="text"
-
-                android:text="" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/lname_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/last_name"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/lname_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:height="48dp"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="text"
-
-                android:text="" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/email_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/email"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/email_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-
-                android:inputType="textEmailAddress" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/mobile_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/mobile_no"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/mobile_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-
-                android:inputType="phone" />
-
-
-        </TableRow>
-
-        <TableRow android:gravity="center">
-
-            <TextView
-                android:id="@+id/dob_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dob"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/date_select"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:ems="10"
-                android:focusable="false"
-                android:gravity="center"
-                android:hint="@string/select_date"
-                android:inputType="none" />
-        </TableRow>
-
-        <TableRow android:gravity="center">
-
-            <TextView
-                android:id="@+id/address_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Address:"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/address_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-
-                android:inputType="textPostalAddress" />
-
-        </TableRow>
-
-        <TableRow android:gravity="center">
-
-            <TextView
-                android:id="@+id/pass_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Password:"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/pass_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-
-                android:inputType="textPassword" />
-        </TableRow>
-
-        <TableRow android:gravity="center">
-
-            <TextView
-                android:id="@+id/confirm_pass_lbl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Confirm Password:"
-                android:textColor="@color/signtext"
-                android:textSize="16sp" />
-
-            <EditText
-                android:id="@+id/confirm_pass_txt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-
-                android:inputType="textPassword" />
-
-        </TableRow>
-
-        <!--        <View-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="16dp"-->
-        <!--            android:background="@android:color/transparent" />-->
-    </TableLayout>
-
-
+    <!-- Profile Photo -->
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/profile_photo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@color/material_dynamic_neutral20"
+        android:background="@color/black"
         android:padding="10dp"
-
-        app:layout_constraintBottom_toTopOf="@+id/sign_expand_btn"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/table_layout"
+        app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/circular_shape"
         app:srcCompat="@drawable/baseline_person_24"
         app:strokeColor="@color/LoginBtn"
         app:strokeWidth="2dp" />
 
+    <!-- Camera Icon FloatingActionButton -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/camera_ic"
         android:layout_width="wrap_content"
@@ -267,30 +45,155 @@
         android:scaleX="0.8"
         android:scaleY="0.8"
         app:backgroundTint="@color/camera_icon"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_photo"
-        app:layout_constraintEnd_toEndOf="@+id/profile_photo"
+        app:layout_constraintBottom_toBottomOf="@id/profile_photo"
+        app:layout_constraintEnd_toEndOf="@id/profile_photo"
         app:srcCompat="@drawable/baseline_camera_alt_24"
         app:tint="@android:color/white" />
+
+    <!-- Additional Content Section (Remove or Use as Needed) -->
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+
+        android:padding="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/sign_expand_btn"
+        app:layout_constraintEnd_toEndOf="@id/guideline_end"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/profile_photo"
+        app:layout_constraintVertical_bias="0.0">
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Name"
+            app:boxBackgroundColor="@color/white"
+            app:boxBackgroundMode="outline"
+            app:startIconDrawable="@drawable/baseline_person_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/name_text"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text|textPersonName|textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Email"
+            app:boxBackgroundColor="@color/white"
+            app:startIconDrawable="@drawable/baseline_email_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email_txt"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Mobile"
+            app:boxBackgroundColor="@color/white"
+            app:startIconDrawable="@drawable/baseline_call_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/mobile_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="DOB"
+            app:boxBackgroundColor="@color/white"
+            app:startIconDrawable="@drawable/baseline_calendar_month_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/date_select"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:ems="10"
+                android:focusable="false"
+                android:inputType="datetime|date" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Address"
+                app:boxBackgroundColor="@color/white"
+                app:startIconDrawable="@drawable/baseline_add_home_24">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/address_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:inputType="text|textLongMessage|textCapWords|textMultiLine" />
+            </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Password"
+            app:boxBackgroundColor="@color/white"
+            app:startIconDrawable="@drawable/baseline_lock_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/pass_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text|textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Confirm Password"
+            app:boxBackgroundColor="@color/white"
+            app:startIconDrawable="@drawable/baseline_lock_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/confirm_pass_txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text|textPassword" />
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/sign_expand_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toTopOf="@+id/back_to_login"
+        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
+        app:layout_constraintStart_toStartOf="@+id/guideline_start"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         android:background="@color/SignUpBtn"
         android:text="SignUp"
         android:textAllCaps="false"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/back_to_login"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />
+        android:textSize="25sp"
+        android:foreground="@drawable/signup_btn_click_ripple"
+        />
 
     <TextView
         android:id="@+id/back_to_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="If already Registered, Click here"
+        android:textColor="#1016f6"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
@@ -300,14 +203,15 @@
 
     <ProgressBar
         android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyle"
+        style="?android:attr/progressBarStyleLarge"
+        android:indeterminateDrawable="@drawable/circular_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
+android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toTopOf="@+id/guideline_top" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
