--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -4,7 +4,7 @@
     android:layout_height="200dp"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@color/LoginBtn">
+    android:background="@color/profile_header">
 
     <!-- Profile Image -->
     <ImageView
@@ -21,8 +21,18 @@
         android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:text="Rishabh Dewangan"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/email_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/black"
+        android:text="rkdewangan@i-connectresources.com"
+        android:textSize="18sp"
+        android:textAlignment="center"
+         />
 </LinearLayout>
