--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,8 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme for dark mode -->
-    <style name="Base.Theme.Safety" parent="Theme.Material3.Dark.NoActionBar">
+    <style name="Base.Theme.Safety" parent="Theme.Material3.Light.NoActionBar">
         <!-- Use this to customize your dark theme -->
+        <item name="colorControlNormal">@color/white</item>
 
         <!-- Uncomment or modify these lines as needed to customize colors -->
         <!--<item name="colorPrimary">@color/my_dark_primary</item>-->
