--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -54,42 +54,47 @@
                 app:cardCornerRadius="50dp"
 
 
+
                 >
 
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <LinearLayout
+android:background="@color/light_blue"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
 
                     >
 
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="165dp"
-                        android:layout_height="137dp"
-                        android:background="@drawable/iconlogo"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/textView"
-                        app:layout_constraintHorizontal_bias="0.5"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.507" />
+                    <com.google.android.material.imageview.ShapeableImageView
+                        android:id="@+id/card_profile"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:padding="10dp"
+
+                        app:srcCompat="@drawable/baseline_person_24"
+                        app:strokeColor="@color/TabSelected"
+                        app:strokeWidth="2dp"
+                        app:shapeAppearanceOverlay="@style/circular_shape"
+                        android:layout_marginHorizontal="10dp"
+                        />
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/card_name_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:text="Hello,Rishabh"
+                        android:text="Hello,User"
                         android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                        app:layout_constraintBottom_toBottomOf="@+id/card_profile"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.5"
-                        app:layout_constraintStart_toEndOf="@+id/imageView2"
-                        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+                        app:layout_constraintStart_toEndOf="@+id/card_profile"
+                        app:layout_constraintTop_toTopOf="@+id/card_profile" />
 
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
 
 
             </com.google.android.material.card.MaterialCardView>
