--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -1,3 +1,9 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -70,13 +76,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Name"
+            app:endIconMode="clear_text"
+
             app:boxBackgroundColor="@color/white"
             app:boxBackgroundMode="outline"
             app:startIconDrawable="@drawable/baseline_person_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/name_text"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text|textPersonName|textCapWords" />
@@ -86,12 +93,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Email"
+            app:endIconMode="clear_text"
+
             app:boxBackgroundColor="@color/white"
             app:startIconDrawable="@drawable/baseline_email_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email_txt"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null" />
@@ -101,6 +109,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Mobile"
+            app:endIconMode="clear_text"
+
             app:boxBackgroundColor="@color/white"
             app:startIconDrawable="@drawable/baseline_call_24">
 
@@ -114,6 +124,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="DOB"
+            app:endIconMode="clear_text"
+
             app:boxBackgroundColor="@color/white"
             app:startIconDrawable="@drawable/baseline_calendar_month_24">
 
@@ -130,6 +142,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Address"
+                app:endIconMode="clear_text"
+
                 app:boxBackgroundColor="@color/white"
                 app:startIconDrawable="@drawable/baseline_add_home_24">
 
@@ -147,6 +161,8 @@
             android:layout_height="match_parent"
             android:hint="Password"
             app:boxBackgroundColor="@color/white"
+            app:endIconMode="password_toggle"
+
             app:startIconDrawable="@drawable/baseline_lock_24">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -160,6 +176,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Confirm Password"
+            app:endIconMode="password_toggle"
+
             app:boxBackgroundColor="@color/white"
             app:startIconDrawable="@drawable/baseline_lock_24">
 
@@ -167,6 +185,7 @@
                 android:id="@+id/confirm_pass_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:inputType="text|textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
@@ -215,3 +234,4 @@ android:visibility="gone"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
