--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,13 @@
     <color name="light_gray">#D8DDDD</color>
     <color name="light_blue">#4DBEE3FF</color>
     <color name="yellow">#2962FF</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#0CDD08</color>
+    <color name="light_yellow">#FFEB3B</color>
+    <color name="light_sky_blue">#2196F3</color>
+
+
+
 
 
 
