--- a/app/src/main/res/layout/activity_trackemployee.xml
+++ b/app/src/main/res/layout/activity_trackemployee.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,10 +8,7 @@
     android:orientation="vertical"
     android:layout_marginHorizontal="5dp"
     >
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/search_bar_layout"
@@ -26,6 +23,7 @@
         app:boxStrokeColor="@color/black"
         app:boxStrokeWidth="2dp"
         app:hintEnabled="false"
+        app:layout_constraintTop_toTopOf="@id/main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -41,12 +39,32 @@
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
     <!-- RecyclerView for displaying the list of users -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_users"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
 
-</LinearLayout>
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_bar_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+
+        />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateDrawable="@drawable/circular_progress"
+        android:visibility="gone"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_bar_layout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
