--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -89,6 +89,26 @@
                 android:inputType="text|textPersonName|textCapWords" />
         </com.google.android.material.textfield.TextInputLayout>
 
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="Employee ID"
+            app:endIconMode="clear_text"
+
+            app:boxBackgroundColor="@color/white"
+            app:boxBackgroundMode="outline"
+            app:startIconDrawable="@drawable/uniqueid">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/emp_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text|textPersonName|textCapWords" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
