--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,9 @@
     <color name="light_yellow">#FFEB3B</color>
     <color name="light_sky_blue">#2196F3</color>
 
+    <color name="light_gray_2">#363636</color>
+
+
 
 
 
