--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -251,10 +251,11 @@
         android:id="@+id/sign_expand_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/SignUpBtn"
+        android:background="@color/green"
         android:text="SignUp"
         android:textAllCaps="false"
         android:textSize="20sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/back_to_login"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
         app:layout_constraintHorizontal_bias="0.5"
