--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,8 +37,7 @@
     <color name="light_gray_3">#e4e4e4</color>
     <color name="moderate_cyan">#40bad2</color>
 
-
-
+    <color name="blue">#0000FF</color>
 
 
 
