--- a/app/src/main/res/layout/list_users.xml
+++ b/app/src/main/res/layout/list_users.xml
@@ -15,12 +15,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:background="@color/light_gray_3">
 
 
         <LinearLayout
-            android:paddingHorizontal="20dp"
+            android:paddingHorizontal="10dp"
             android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -33,12 +33,12 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/profile_image"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 app:shapeAppearanceOverlay="@style/circular_shape" />
 
             <TextView
-
+android:layout_marginTop="5dp"
                 android:id="@+id/emp_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,24 +78,24 @@
             app:layout_constraintTop_toTopOf="@+id/textView4"
             app:layout_constraintVertical_bias="0.0" />
 
+
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="5dp"
             android:text="Check In"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@+id/linearLayout2"
             app:layout_constraintTop_toBottomOf="@+id/user_name" />
-
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:text="Home"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/linearLayout2"
@@ -133,7 +133,7 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:text="Office"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/textView8"
@@ -177,10 +177,11 @@
             android:textColor="@color/light_gray_2"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/office_checkout"
-            app:layout_constraintStart_toStartOf="@+id/textView9" />
+            app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout2" />
 
         <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
