--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,30 +2,14 @@
 
     <!-- Base application theme for dark mode -->
     <style name="Base.Theme.Safety" parent="Theme.Material3.Light.NoActionBar">
-        <!-- Use this to customize your dark theme -->
         <item name="colorControlNormal">@color/white</item>
-
-        <!-- Uncomment or modify these lines as needed to customize colors -->
-        <!--<item name="colorPrimary">@color/my_dark_primary</item>-->
-        <!--<item name="colorPrimaryVariant">@color/my_dark_primary_variant</item>-->
-        <!--<item name="colorOnPrimary">@color/my_dark_on_primary</item>-->
-
-        <!-- You can also set other colors like: -->
-        <!--<item name="colorSecondary">@color/my_dark_secondary</item>-->
-        <!--<item name="colorSecondaryVariant">@color/my_dark_secondary_variant</item>-->
-        <!--<item name="colorOnSecondary">@color/my_dark_on_secondary</item>-->
-
-        <!-- Set status bar and navigation bar colors if needed -->
-<!--        <item name="android:statusBarColor">@color/LoginBtn</item>-->
-        <!--<item name="android:navigationBarColor">@color/my_dark_nav_bar_color</item>-->
-
+        <!-- Set black status bar -->
+        <item name="android:statusBarColor">@android:color/black</item>
+        <!-- Light icons and text for status bar -->
+        <item name="android:windowLightStatusBar">false</item>
+<!--        <item name="android:textColor">@color/white</item>-->
     </style>
 
-    <!-- Custom theme for dark mode (if needed) -->
-    <style name="mytheme" parent="Base.Theme.Safety">
-        <!-- Additional customization for dark theme here -->
-        <!-- Uncomment or add any colors you want to change for your dark theme -->
-        <!--<item name="colorPrimary">@color/my_dark_primary</item>-->
-    </style>
+
 
 </resources>
